Fix alignments

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Great+Vibes&display=swap');
 
-header {
-  padding: 10px;
+header {  
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .header-nav li {
@@ -16,10 +16,27 @@ header {
   margin-left: 0;
 }
 
+div > h1 {
+  margin-top:2em;
+  margin-bottom:0.2em;
+  padding:1em;
+
+}
+
+ul{
+  list-style: none;
+  font-size: large;
+}
+
+p { 
+  margin-left:2em;
+}
+
 nav {
   display: flex;
   flex-direction: row;
   margin-right: 5em;
+  margin-top: 3em;
 }
 
 .align-left {
@@ -32,9 +49,13 @@ nav {
 section {
   display: flex;
   flex-direction: row;
-  width: 50%;
+  width:100%;
   padding: 10px;
-  float: right;
+ 
+}
+
+section :first-child {
+  width: 80%;
 }
 
 .container {
@@ -71,6 +92,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  width:100%;
 }
 
 .container > div:first-child {
